--- a/cd/package.json
+++ b/cd/package.json
@@ -5,7 +5,19 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "start": "node ."
+    "start": "gulp"
   },
-  "dependencies": {}
+  "babel": {
+    "presets": [
+      "latest"
+    ]
+  },
+  "dependencies": {
+    "gulp-babel": "^6.1.2"
+  },
+  "devDependencies": {
+    "babel-preset-latest": "^6.22.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1"
+  }
 }
