--- a/cd/package.json
+++ b/cd/package.json
@@ -12,12 +12,24 @@
       "latest"
     ]
   },
+  "eslintConfig": {
+    "extends": "airbnb",
+    "plugins": [
+      "import"
+    ]
+  },
   "dependencies": {
     "gulp-babel": "^6.1.2"
   },
   "devDependencies": {
     "babel-preset-latest": "^6.22.0",
     "del": "^2.2.2",
-    "gulp": "^3.9.1"
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1"
   }
 }
