--- a/cd/package.json
+++ b/cd/package.json
@@ -16,12 +16,17 @@
     "extends": "airbnb",
     "plugins": [
       "import"
-    ]
+    ],
+    "env": {
+      "browser": true
+    }
   },
   "dependencies": {
+    "babel-polyfill": "^6.22.0",
     "gulp-babel": "^6.1.2"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.10",
     "babel-preset-latest": "^6.22.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
@@ -30,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1"
+    "gulp-eslint": "^3.0.1",
+    "webpack-stream": "^3.2.0"
   }
 }
