--- a/cd/package.json
+++ b/cd/package.json
@@ -26,7 +26,9 @@
     "babel-polyfill": "^6.22.0",
     "gulp-babel": "^6.1.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
