--- a/cd/package.json
+++ b/cd/package.json
@@ -22,9 +22,21 @@
       "browser": true
     }
   },
+  "rules": {
+    "new-cap": [
+      2,
+      {
+        "capIsNewExceptions": [
+          "Map",
+          "List"
+        ]
+      }
+    ]
+  },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
     "gulp-babel": "^6.1.2",
+    "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
