Mocha and chai added  with a simple test

--- a/cd/package.json
+++ b/cd/package.json
@@ -5,7 +5,8 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "test": "gulp test"
   },
   "babel": {
     "presets": [
@@ -41,12 +42,14 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "redux-actions": "^1.2.1"
+    "redux-actions": "^1.2.1",
+    "redux-immutable": "^3.0.11"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "chai": "^3.5.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -55,6 +58,8 @@
     "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
+    "mocha": "^3.2.0",
     "webpack-stream": "^3.2.0"
   }
 }
