--- a/cd/package.json
+++ b/cd/package.json
@@ -60,6 +60,8 @@
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
     "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "webpack-stream": "^3.2.0"
   }
 }
